Code cleanup 5 (#558)
cleanup on listener, player, and potion packages
- addressed warnings
- javadoc cleanup
- code reformat